# comsol-agent

./: .gitignore  README.md  pyproject.toml
skills/: SKILL.md
src/: main.py
src/agent/: orchestrator.py
src/core/: __init__.py  experience_store.py  paper_parser_base.py  template_store.py
src/feedback/: solver_diagnostics.py
src/knowledge/: experience_store.py  knowledge_bridge.py  paper_parser.py  template_store.py
src/mcp/: adapter.py
templates/photonic_crystal/: wu_hu.yaml
tests/: test_e2e.py  test_kb.py
