[project]
name = "comsol-agent"
version = "0.1.0"
description = "COMSOL Agent — 全栈仿真自动化平台"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pymupdf>=1.24.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
comsol-agent = "src.main:main"
